Upgrading to Datomic 0.9.5130 and Scala 2.11.6